Modified the UI

--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -94,3 +94,12 @@ footer {
     height: 5vh;
     text-align: center;
 }
+
+tr {
+    height: auto;
+}
+
+td {
+    text-align: center;
+    border: 1px solid black;
+}
